--- a/Лабораторная работа № 2/Лабароторная работа 2.md
+++ b/Лабораторная работа № 2/Лабароторная работа 2.md
@@ -71,25 +71,48 @@
 #include "pch.h"
 #include <iostream>
 
+bool doubleEquals(double left, double right, double epsilon) {
+	return (fabs(left - right) < epsilon);
+}
+
+bool doubleLess(double left, double right, double epsilon,
+	bool orequal = false) {
+	if (fabs(left - right) < epsilon) {
+		// В рамках epsilon, так что считаются равными
+		return (orequal);
+	}
+	return (left < right);
+
+}
+
+bool doubleGreater(double left, double right, double epsilon,
+	bool orequal = false) {
+	if (fabs(left - right) < epsilon) {
+		// В рамках epsilon, так что считаются равными
+		return (orequal);
+	}
+	return (left > right);
+}
+
+
 int main()
 {
-    float a, b, x0, x1, dx, x, xi ,max, min;
-    std::cin >> a>> b>> x0>> x1>> dx;
-    x = x0;
-    max = x0;
-    min = x0;
-    while (x <= x1) {
-        if (x <= a) xi = exp(x);
-        else if (x > a && x < b) xi = cos(x*x);
-        else if (b <= x) xi = tan(x) + 8;
-        if (max < xi)max = xi;
-        if (min > xi)min = xi;
-        std::cout << xi << "    " << x << "\n";
-        x += dx;
-    }
-    std::cout << "Max=" << max << "    Min=" << min;
-    system("pause");
-}
+	float a, b, x0, x1, dx, x, xi ,max, min;
+	std::cin >> a>> b>> x0>> x1>> dx;
+	x = x0;
+	max = x0;
+	min = x0;
+	while (doubleLess(x, x1, .0001, true)) {
+		if (doubleLess(x, a, .0001, true)) xi = exp(x);
+		else if (doubleGreater(x, a, .0001) && doubleLess(x, b, .0001)) xi = cos(x*x);
+		else if (doubleLess(x, b, .0001, true)) xi = tan(x) + 8;
+		if (max < xi)max = xi;
+		if (min > xi)min = xi;
+		std::cout << xi << "    " << x << "\n";
+		x += dx;
+	}
+	std::cout << "Max=" << max << "    Min=" << min;
+	system("pause");
 ```
 
 #### Ввывод
