Update Лабароторная работа 2.md

--- a/Лабораторная работа № 2/Лабароторная работа 2.md
+++ b/Лабораторная работа № 2/Лабароторная работа 2.md
@@ -9,7 +9,7 @@
 ​
 студента 1 курса группы 192(2)  
 <br/>Лунгула Кирилла Александровича 
-<br/>направления подготовки 09.03.01 "Программная инженерия" 
+<br/>направления подготовки 09.03.04 "Программная инженерия" 
 
 <br/><br/>
 <table>
@@ -115,7 +115,7 @@ int main()
 	system("pause");
 ```
 
-#### Ввывод
+#### Вывод
 
 в ходе лабораторной работы были получены такие навыки, как
 * умение применять оператор ветвления и циклы;
