Update Лабароторная работа 5.md

--- a/Лабораторная работа № 5/Лабароторная работа 5.md
+++ b/Лабораторная работа № 5/Лабароторная работа 5.md
@@ -240,31 +240,22 @@ int main()
     }
 }
 ```
-2. Рассчитанные характеристики
+2. Таблица с характеристиками
 
-```csv
-"Характеристика","Результат"
-"Общее число выживших",342
-"Общее число выживших из 1 класса",136
-"Общее число выживших из 2 класса",87
-"Общее число выживших из 3 класса",119
-"Общее число выживших мужчин",109
-"Общее число выживших женщин",233
-"Средний возраст",29.68
-"Средний возраст мужчин",30.70
-"Средний возраст женщин",27.90
-"Штат, в котором больше всего пасажиров","Southampton"
-"ID несовершеннолетних","8,10,11,15,17,23,25,40,44,51,59,60,64,69,72,79,85,87,112,115,120,126,139,148,157,164,165,166,172,173,183,184,185,194,206,209,221,234,238,262,267,279,283,298,306,308,330,334,341,349,353,375,382,387,390,408,420,434,436,446,447,449,470,480,481,490,501,505,531,533,536,542,543,550,551,575,619,635,643,645,684,687,690,692,721,722,732,747,751,752,756,765,778,781,782,788,789,792,803,804,814,820,825,828,831,832,842,845,851,853,854,870,876"
-
-```
-3. Запись в файл
-    ```text
-   8, 10, 11, 15, 17, 23, 25, 39, 40, 44, 50, 51, 59, 60, 64, 69, 72, 85, 87, 112, 115, 120, 126, 139, 145, 148, 157, 164, 165, 166, 172, 173, 176, 183, 184, 185, 194, 205, 206, 209, 221, 229, 234, 238, 262, 267, 279, 283, 298, 308, 312, 330, 334, 341, 349, 353, 372, 375, 382, 386, 387, 390, 408, 418, 420, 425, 434, 436, 446, 447, 449, 480, 481, 490, 501, 505, 506, 531, 533, 536, 542, 543, 550, 551, 575, 586, 619, 635, 643, 652, 655, 676, 678, 684, 687, 689, 690, 692, 701, 703, 721, 722, 732, 747, 751, 752, 758, 765, 776, 778, 781, 782, 787, 788, 789, 792, 803, 808, 814, 820, 825, 828, 831, 835, 842, 845, 851, 853, 854, 856, 870, 876, 
-   Выжившие 342   из них м 109   ж 233
-   Первый класс 136   второй 87    третий 119
-   Средний возраст 29   м 31   ж 28
-   SOUTHAMPTON 
-    ```
+    | Характеристика | Результат |
+    |---|---|
+    |  Общее число выживших | 342 |
+    |  Общее число выживших из 1 класса | 136 |
+    |  Общее число выживших из 2 класса | 87 |
+    |  Общее число выживших из 3 класса | 119 |
+    |  Общее число выживших мужчин | 109 |
+    |  Общее число выживших женщин | 233 |
+    |  Средний возраст | 29.68 |
+    |  Средний возраст мужчин | 30.70 |
+    |  Средний возраст женщин | 27.90 |
+    |  Штат, в котором больше всего пасажиров | Southampton |
+    |  ID несовершеннолетних | 8,10,11,15,17,23,25,40,44,51,59,60,64,69,72,79,85,87,112,115,120,126,139,148,157,164,165,166,172,173,183,184,185,194,206,209,221,234,238,262,267,279,283,298,306,308,330,334,341,349,353,375,382,387,390,408,420,434,436,446,447,449,470,480,481,490,501,505,531,533,536,542,543,550,551,575,619,635,643,645,684,687,690,692,721,722,732,747,751,752,756,765,778,781,782,788,789,792,803,804,814,820,825,828,831,832,842,845,851,853,854,870,876|
+3. Ссылка на [таблицу](https://github.com/Waytmer/Homework/blob/master/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F%20%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%E2%84%96%205/table.csv "Таблица с характеристиками в формате csv")
    
 #### Ввывод
 
