Update Лабароторная работа 5.md

--- a/Лабораторная работа № 5/Лабароторная работа 5.md
+++ b/Лабораторная работа № 5/Лабароторная работа 5.md
@@ -194,7 +194,7 @@ int main()
                 break;
             }
         }
-
+        csv.close();
         ofstream Table("table.csv");
         if (!Table.is_open()) {
             cout << "ERROR! File don`t create!" << endl;
@@ -236,6 +236,7 @@ int main()
             }
             ID_minor.erase(ID_minor.size() - 1);
             Table << "\"ID несовершеннолетних\",\"" << ID_minor << "\"\r";
+            Table.close();
         }
     }
 }
