--- a/Лабораторная работа № 3/Лабороторная работа 3.md
+++ b/Лабораторная работа № 3/Лабороторная работа 3.md
@@ -58,7 +58,9 @@ int main()
     {
         for (int y = img.get_height() - 1; y >= 0; y--)
         {
-            if (x == 0 && y == 0) break;
+            if (x == 0 && y == 0){
+            break;
+        }
 
             char bit1 = img.red_at(x, y) & 1;
             char bit2 = img.blue_at(x, y) & 1;
