Update Лабораторная работа №8.md

--- a/Лабораторная работа № 8/Лабораторная работа №8.md
+++ b/Лабораторная работа № 8/Лабораторная работа №8.md
@@ -23,8 +23,6 @@
 ​
 Симферополь, 2019
 
-* * *
-
 ### Цель: 
 1. Настроить IDE Qt Creator для разработки приложений под android ОС;
 2. Изучить базовые понятия связанные с мобильной разработкой;
@@ -41,7 +39,7 @@
 *Рис.1 Настройка Qt*
 5. Из примеров Qt выбираем произвольный проект и настраиваем его сборку на android. Я выбрал Analog Clock Window Example.\
 ![Изображение#2](Screnshot/2.png)\
-*Рис.2 Пример калькулятора для андроид.*
+*Рис.2 Пример часов для андроид.*
 
 6. В QT запускаем отладку. Нам предлагается выбрать один из запущенных эмуляторов или подключенных телефонов. После того как все соберётся, нам в вывод сборки выведеться данное сообщение.
 ![Изображение#3](Screnshot/3.png)\
