--- a/Лабораторная работа № 9/Лабораторная работа №9.md
+++ b/Лабораторная работа № 9/Лабораторная работа №9.md
@@ -5,7 +5,7 @@
 Кафедра компьютерной инженерии и моделирования\
 <br/><br/>
 ​
-### Отчёт по лабораторной работе № 8<br/> по дисциплине "Программирование"
+### Отчёт по лабораторной работе № 9<br/> по дисциплине "Программирование"
 <br/>
 
 студента 1 курса группы ПИ-б-о-192(2)\
@@ -24,32 +24,26 @@
 Симферополь, 2019
 
 ### Цель: 
-1. Настроить IDE Qt Creator для разработки приложений под android ОС;
-2. Изучить базовые понятия связанные с мобильной разработкой;
-3. Научиться создавать мобильные приложения при помощи фреймворка Qt 5.14.
+1. Познакомиться с Google Test и Google Mock Framework;
+2. Изучить базовые понятия относящийся к тестированию кода;
+3. Научиться тестировать классы в среде разработки Qt Creator.
 
 
 ### Ход работы
 
-1. Скачиваем на компьютер JDK 8, если его нет.
-2. Устанавливаем Android Studio (можно установить sdkmanager).
-3. В Android Studio заходим в SDK и устанавливаем необходиме компоненты.
-4. Заходим в QT и в настройках android указываем путь на скаченные нами JDK, SDK и NDK.\
+1. [Ссылка на тестовый проект](https://github.com/Waytmer/Homework/tree/master/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F%20%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%E2%84%96%209/TestW "Тестовый проект")
+2. Результат тестирования приложения
 ![Изображение#1](Screnshot/1.png)\
-*Рис.1 Настройка Qt*
-5. Из примеров Qt выбираем произвольный проект и настраиваем его сборку на android. Я выбрал Analog Clock Window Example.\
-![Изображение#2](Screnshot/2.png)\
-*Рис.2 Пример часов для андроид.*
-
-6. В QT запускаем отладку. Нам предлагается выбрать один из запущенных эмуляторов или подключенных телефонов. После того как все соберётся, нам в вывод сборки выведеться данное сообщение.
-![Изображение#3](Screnshot/3.png)\
-*Рис.3 Вывод об успешной сборке.*\
-7. Так как, я запускал приложение через телефон, подключенный по USB, мне нужно было разрешить отладку по USB\
-![Изображение#4](Screnshot/4.png)\
-*Рис.4 Разрешение на отладку.*\
-Если мы все сделали правильно, у нас на телефоне открывается приложение.\
-![Изображение#5](Screnshot/5.png)\
-*Рис.5 Скриншот запущенного приложения.*
+*Рис.1 Результаты тестированияя*
+3. Ошибка возникла в результате неправильного написанного метода "LockDoor" класса "LockController". Ошибка состояла в инвертирования действия (вместо того чтобы закрыть, мы открывали).\
+4. Исправление ошибки выглядит следующим образом
+~~~c++
+DoorStatus LockController::lockDoor()
+{
+    return latch->close();//тут стояло "open()", что и было ошибкой.
+}
+~~~
+5. Причины возникновения ошибки могут быть различными, от обычного "Ctrl+c, Ctrl+v" забыв поменять метод или же проблемы в самом методе или его названии.
 
 ### Вывод
-Я научился устанавливать компоненты, необходимые для android разработки. Я смог настроить Qt для работы с android и ознакомился с тем, как создавать мобильные приложения при помощи фреймворка Qt.
+Я познакомился с Google Test и Google Mock Framework. Изучил базовые понятия относящийся к тестированию кода. Научился тестировать классы в среде разработки Qt Creator и выявлять ошибки в классах.
