--- a/Лабораторная работа № 9/Лабораторная работа №9.md
+++ b/Лабораторная работа № 9/Лабораторная работа №9.md
@@ -34,7 +34,7 @@
 1. [Ссылка на тестовый проект](https://github.com/Waytmer/Homework/tree/master/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F%20%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%E2%84%96%209/TestW "Тестовый проект")
 2. Результат тестирования приложения
 ![Изображение#1](Screnshot/1.png)\
-*Рис.1 Результаты тестированияя*
+*Рис.1 Результаты тестирования*
 3. Ошибка возникла в результате неправильного написанного метода "LockDoor" класса "LockController". Ошибка состояла в инвертирования действия (вместо того чтобы закрыть, мы открывали).\
 4. Исправление ошибки выглядит следующим образом
 ~~~c++
